# Treekin

./: .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  ChangeLog.md  INSTALL  Makefile.am  README  README.md  autogen.sh  bardata.h  barparser.c  barparser.cpp  barparser.h  calc.c  calc.cpp  calc.h  calcpp.cpp  calcpp.h  configure.ac  err.c  err.h  exp_matrix.c  exp_matrix.cpp  exp_matrix.h  expokit_wrappers.h  globals.c  globals.cpp  globals.h  main.c  main.cpp  makefile  matrix.h  mxccm.c  mxccm.cpp  mxccm.h  mxmesch.c  schur.c  treekin.1  (+4 more)
m4/: ac_mlapack.m4  ac_mpack.m4
man/: .gitignore  Makefile.am  help2manWrapper.sh
man/include/: treekin.inc
packaging/: .gitignore  PKGBUILD-mlapack.in  PKGBUILD.in  treekin-mlapack.spec.in  treekin.spec.in
packaging/debian/: changelog  control  copyright  rules
src/: .gitignore  Makefile.am  barparser.cpp  barparser.h  calc.cpp  calc.h  calcpp.cpp  calcpp.h  exp_matrix.cpp  exp_matrix.h  globals.cpp  globals.h  main.cpp  matrix.h  mxccm.cpp  mxccm.h  treekin.ggo  treekinCastableTypes.h
