dnl Autoconf initialization.
dnl Bug reports are sent to mtw@tbi.univie.ac.at

AC_INIT([Treekin],
        m4_esyscmd_s([cat VERSION.txt]),        
        [mtw@tbi.univie.ac.at], [Treekin], [http://www.tbi.univie.ac.at/RNA/Treekin])
AC_CONFIG_AUX_DIR(config)

AC_CONFIG_MACRO_DIR([m4])

AC_CONFIG_SRCDIR(calc.cpp)
AC_CONFIG_HEADERS(config.h)

AM_SILENT_RULES([yes])

AM_INIT_AUTOMAKE(-Wall -Werror)

AC_CANONICAL_HOST

TestDataDirectory="\$(srcdir)"
dnl SHAREDLIBEXT="so"

case $host_os in
  *linux*)
    HOST_TYPE="linux"
    SHAREDLIBEXT="so"
    ;;

  *solaris*)
    HOST_TYPE="solaris"
    SHAREDLIBEXT="so"
    ;;

  *cygwin*)
    HOST_TYPE="cygwin"
    SHAREDLIBEXT="so"
    ;;

  *darwin*)
    HOST_TYPE="darwin"
    SHAREDLIBEXT="dylib"
    TestDataDirectory="."
    ;;
esac
AC_SUBST(TestDataDirectory)
AC_SUBST(HOST_TYPE)
AC_SUBST(SHAREDLIBEXT)
AC_SUBST(CFLAGS)

dnl ---------------------------------------------------------------------------
dnl Checks for various programs and packages.
dnl ---------------------------------------------------------------------------

AC_PROG_CXX
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_PATH_PROG([AUTOCONF],[autoconf],[autoconf])
AC_PATH_PROG([ACLOCAL],[aclocal],[aclocal])
AC_PATH_PROG([MAKE],[make],[make])
AC_PATH_PROG([AR],[ar],[ar])

dnl ---------------------------------------------------------------------------
dnl Checks for gengetopt
dnl ---------------------------------------------------------------------------
AC_DEFUN([AX_TREEKIN_GENGETOPT],[
  AC_PATH_PROG([GENGETOPT],[gengetopt],[],[])
  # if gengetopt is unavailable, check whether commandline parser sources are present
  AS_IF([ test "x$GENGETOPT" = "x"],[
    create_commandline_parser="no"
    AS_IF([ ! test -f treekin_cmdline.c ], [
      AC_MSG_ERROR(gengetopt not found)
    ])
  ])
  AM_CONDITIONAL(MAKE_CMDLINE_PARSER, test "x$create_commandline_parser" != "xno")
])

AX_TREEKIN_GENGETOPT



dnl ---------------------------------------------------------------------------
dnl Checks for libraries.
dnl ---------------------------------------------------------------------------

AC_LANG(C)
#AC_CHECK_LIB(gfortran, exp)
dnl AC_SEARCH_LIBS([ddot_],[blas],[],[
dnl                AC_MSG_ERROR([unable to find the ddot_() function in lblas])
dnl                ])
AC_CHECK_LIB(blas,ddot_,[],[
        AC_MSG_ERROR([unable to find the ddot_() function in lblas. Is blas installed?])
])                                
AC_CHECK_LIB(lapack,dgeevx_,[],[
        AC_MSG_ERROR([unable to find the dgeevx_() function in lblas. Is lapack installed?])
])

#search for the correct include path in the default locations
AC_CHECK_HEADERS([/usr/include/lapacke.h], [
  CXXFLAGS="-I/usr/include $CXXFLAGS"
], [
  AC_CHECK_HEADERS([/usr/include/lapacke/lapacke.h], [
    CXXFLAGS="-I/usr/include/lapacke $CXXFLAGS"
  ], [
    AC_CHECK_HEADERS([/usr/local/include/lapacke.h], [
      CXXFLAGS="-I/usr/local/include $CXXFLAGS"
    ], [
      AC_CHECK_HEADERS([/usr/local/include/lapacke/lapacke.h], [
        CXXFLAGS="-I/usr/local/include/lapacke $CXXFLAGS"
      ], [])
    ])
  ])
])

dnl AC_CHECK_LIB(m, isnan)
dnl AC_CHECK_LIB(arpack,dseupd_)

dnl ---------------------------------------------------------------------------
dnl Checks for header files.
dnl ---------------------------------------------------------------------------

AC_HEADER_STDC
AC_CHECK_HEADERS(errno.h)

dnl Check for glib-2.0 using pkgconfig
dnl PKG_CHECK_MODULES([GLIB], [glib-2.0], [have_glib=true], [have_glib=false])
dnl if test "x${have_glib}" = "xfalse" ; then
dnl         AC_MSG_ERROR([No Glib package information found])
dnl fi
dnl AC_SUBST(GLIB_CFLAGS)
dnl AC_SUBST(GLIB_LIBS)

AC_CHECK_HEADERS(math.h)

dnl ---------------------------------------------------------------------------
dnl Check for mlapack
dnl ---------------------------------------------------------------------------

AC_TREEKIN_MPACK

dnl ---------------------------------------------------------------------------
dnl Checks for typedefs, structures, and compiler characteristics.
dnl ---------------------------------------------------------------------------

AC_C_BIGENDIAN
AC_C_CONST
AC_TYPE_SIZE_T
AC_EXEEXT
AC_OBJEXT

dnl ---------------------------------------------------------------------------
dnl Miscellaneous
dnl ---------------------------------------------------------------------------

# Root directory
# Translate path for native Windows compilers for use with 'make check'

ROOT_DIR=`pwd`
case $host in
*-*-cygwin* | *-*-mingw*)
  if (cygpath --mixed $ROOT_DIR) >/dev/null 2>/dev/null; then
    ROOT_DIR=`cygpath --mixed $ROOT_DIR`
  fi
  # Extra files generated by some Windows compilers
  EXTRA_CLEAN="*.stackdump *.exp *.lib"
  ;;
esac

dnl ---------------------------------------------------------------------------
dnl Output
dnl ---------------------------------------------------------------------------

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([packaging/treekin.spec packaging/PKGBUILD])

AC_OUTPUT

dnl ---------------------------------------------------------------------------
dnl Inform users of settings
dnl ---------------------------------------------------------------------------

# get directory paths

eval _bindir=$(eval printf "%s" $bindir)
eval _libdir=$(eval printf "%s" $libdir)
eval _includedir=$(eval printf "%s" $includedir)
eval _datadir=$(eval printf "%s" $datadir)
eval _mandir=$(eval printf "%s" $mandir)

if test "x$mpack_wanted_but_failed" != "x"; then
  drtrafo_note="Note, that the program DrTransformer requires Treekin to be linked against the MPACK library!"
fi


AC_MSG_NOTICE(
[

======================================
    Treekin ${PACKAGE_VERSION}
======================================

Configured successful with the following options:

Extra Libraries
---------------
  * MPack             : ${enable_MPACK:-no}   $mpack_wanted_but_failed

Install Directories
-------------------
  * Executables       : $_bindir
  * Libraries         : $_libdir
  * Header files      : $_includedir
  * Extra Data        : $_datadir
  * Man pages         : $_mandir

$drtrafo_note

You can run make now.
])
